changing class name to com.github.jcustenborder.kafka.connect.redis.hset from com.github.jcustenborder.kafka.connect.redis to diferenciate from original connector

--- a/config/sink.properties
+++ b/config/sink.properties
@@ -17,6 +17,6 @@
 name=sink
 topics=twitter
 tasks.max=1
-connector.class=com.github.jcustenborder.kafka.connect.redis.RedisSinkConnector
+connector.class=com.github.jcustenborder.kafka.connect.redis.hset.RedisSinkConnector
 key.converter=org.apache.kafka.connect.converters.ByteArrayConverter
 value.converter=org.apache.kafka.connect.converters.ByteArrayConverter
